--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>virá uma imagem</h1>
+   <body>
+    <h1>virá uma imagem
+        Escola
+        Estudante
+    </h1>
+   </body> 
 </body>
 </html>
