--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <body>
-    <h1>virá uma imagem
-        Escola
-        Estudante
-    </h1>
+   <body> 
+    <header>
+        <h1>virá uma imagem
+            <ul>
+                <li>Escola</li>
+                <li>Estudante</li>
+            </ul>
+        </h1>
+   </header>
    </body> 
 </body>
 </html>
