--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class = "cabecalho-imagem" src="./img/site.jpeg" alt="foto do site">
+        <img class = "cabecalho-imagem" src="./img/WhatsApp Image 2023-08-16 at 13.37.06.jpeg" alt="foto do site">
             <ul class="cabecalho-lista-item">
             <li class="cabecalho-lista-item">PROFESSOR</li>
             <LI class="cabecalho-lista-item">ESCOLA</LI>
