--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </header>
    <section class="escola">
     <div class="escola-conteudo">
-    <h2 class="escola-título">Sobre a Escola</h2>
-    <p class="escola-texto-um"> Se você não estivesse aqui nada disso, estaria...</p>
-    <p class="escola-texto-dois"> acontecendo! </p>
+    <h2 class="escola-título">Arodasi</h2>
+    <p class="escola-texto-um">Fazemos seu lanche do jeitinho que você pediu!</p>
+    <p class="escola-texto-dois"> Entregamos nas residências </p>
     </div>
     <img class="imagem-escola" src="./img/desenho-de-alunos-em-frente-a-escola_157186-476.avif" alt="Fotos frente escola">
    </section>
