--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class = "cabecalho-imagem" src="./img/WhatsApp_Image_2023-09-06_at_13.49.15-removebg-preview.png" alt="foto do site">
+        <img class = "cabecalho-imagem" src="img/logo.png" alt="foto do site">
             <ul class="cabecalho-lista-item">
             <li class="cabecalho-lista-item">PROFESSOR</li>
             <LI class="cabecalho-lista-item">ESCOLA</LI>
@@ -20,7 +20,7 @@
     <p class="escola-texto-um">Fazemos seu lanche do jeitinho que você pediu!</p>
     <p class="escola-texto-dois"> Entregamos nas residências </p>
     </div>
-    <img class="imagem-escola" src="./img/desenho-de-alunos-em-frente-a-escola_157186-476.avif" alt="Fotos frente escola">
+    <img class="imagem-escola" src="img/hamburguer.jpeg" alt="Fotos frente escola">
    </section>
   </body>
 </html>
